--- a/index.html
+++ b/index.html
@@ -4,18 +4,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/styles/styles.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <link rel="stylesheet" href="/styles/prueba.css">
   <title>Adopcion</title>
 </head>
 <body>
-  <div id="main-scene" class="img-ini">
-    <img style="height: auto; width: auto;" src="/images/logo.png">
-  </div>
-  <div id="second-scene">
+  <div class="container-sm" style="max-height:400px; max-width: 400px;">
+    <div id="inicial" class="row justify-content-center text-center uno pt-5 mt-5">
+        <div class="col pt-5 mt-5">
+            <a href="/index2.html"><img class="img-fluid imagen" src="https://i.imgur.com/P25i3ts.png" alt=""></a>
+        </div>
+    </div>
+</div> 
 
-  </div>
-  <div id="third-scene">
-
-  </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+    crossorigin="anonymous"></script>
+<script src="./scripts/next.js"></script>
 </html>
