--- a/index3.html
+++ b/index3.html
@@ -14,7 +14,7 @@
 
 <body>
     <div id="item" class="container-sm dos" style="max-height:400px; max-width: 400px;">
-        <div class="row justify-content-center text-center">
+        <div class="row justify-content-center text-center aling-self-center aling-item-center">
             <div class="col pt-5 mt-4">
                 <img class="img-fluid" src="https://i.imgur.com/EQcB23U.png" alt="">
                 <h5 class="fw-bold">Crea una nueva historia</h5>
