--- a/fav.html
+++ b/fav.html
@@ -28,16 +28,16 @@
     <div>
       <nav id="pop" class="navbar nav-pills fixed-bottom navbar-expand-lg navbar-light bg-light">
         <div class="container-md justify-content-center text-center">
-          <a class="col navbar-brand nav-link" href="/home.html">
+          <a class="col navbar-brand nav-link" href="./home.html">
             <i id="txt" class="bi bi-house-door"></i> 
           </a>
-          <a class="col navbar-brand nav-link" href="/message.html">
+          <a class="col navbar-brand nav-link" href="./message.html">
             <i id="txt" class="bi bi-chat"></i>
           </a>
           <a class="fs-6 col navbar-brand nav-link rounded-pill active" id="active" href="#">
             <i id="txt" class="bi bi-heart"></i> Favoritos
           </a>
-          <a class="col navbar-brand nav-link" href="profile.html">
+          <a class="col navbar-brand nav-link" href="./profile.html">
             <i id="txt" class="bi bi-person"></i>
           </a>
         </div>
