--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-  <link rel="stylesheet" href="/styles/prueba.css">
+  <link rel="stylesheet" href="./styles/prueba.css">
   <title>Adopcion</title>
 </head>
 <body>
   <div class="container-sm" style="max-height:400px; max-width: 400px;">
     <div id="inicial" class="row justify-content-center text-center uno pt-5 mt-5">
         <div class="col pt-5 mt-5">
-            <a href="/index2.html"><img class="img-fluid imagen" src="https://i.imgur.com/P25i3ts.png" alt=""></a>
+            <a href="./index2.html"><img class="img-fluid imagen" src="https://i.imgur.com/P25i3ts.png" alt=""></a>
         </div>
     </div>
 </div> 
@@ -22,7 +22,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
     crossorigin="anonymous"></script>
-    <script src="/socket.io/socket.io.js" charset="utf-8"></script>
+    <!--script src="/socket.io/socket.io.js" charset="utf-8"></script-->
 
 <script src="./scripts/next.js"></script>
 </html>
