--- a/info.html
+++ b/info.html
@@ -14,7 +14,7 @@
         <div id="move1" class="card bg-light text-white">
             <img id="pic" src="" class="card-img">
             <div class="card-img-overlay">
-                <a id="back-url" href="./home.html"><img src="https://i.imgur.com/HDGs7pN.png"></a>
+                <a id="back-url" href=""><img src="https://i.imgur.com/HDGs7pN.png"></a>
             </div>
         </div>
         <section id="move2" class="container bg-light rounded p-4">
@@ -98,7 +98,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
     </script>
-<script src="/socket.io/socket.io.js" charset="utf-8"></script>
+<!--script src="/socket.io/socket.io.js" charset="utf-8"></script-->
 <script type="module" src="./main.js"></script>
 
 
