--- a/chat.html
+++ b/chat.html
@@ -28,19 +28,7 @@
         </div>
     </main>
     <section id="chat" class="container" style="padding-top: 150px; padding-bottom: 70px;">
-        <!--div id="me" class="me">
-            <div class="message-me">
-           
-                <p>¡Hola! Me encantaria Adoptar a Rocky.S</p>
-                <p class="text-end h6">4:00 PM</p>
-            </div>
-        </div>
-        <div id="you" class="you">
-            <div class="message-you">
-                <p>Hola Buen Dia, en que horario podriamos encontrarnos?</p>
-                <p class="text-star h6">6:00 PM</p>
-            </div>
-        </div-->
+
     </section>
 
     <section>
@@ -57,7 +45,7 @@
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-<script src="/socket.io/socket.io.js" charset="utf-8"></script>
+<!--script src="/socket.io/socket.io.js" charset="utf-8"></script-->
 <script type="" src="./scripts/chat.js"></script>
 
 </html>
