--- a/index3.html
+++ b/index3.html
@@ -22,7 +22,7 @@
                     compartirás bellos momentos con estos amiguitos fieles, tiernos y llenos de amor para regalar.
                 </p>
                 <div class="d-grid gap-2 col mx-auto pt-5">
-                    <a class="btn rounded-pill mt-2" id="active" href="">Contactar</a>
+                    <a class="btn rounded-pill mt-2" id="active" href="">Siguiente</a>
 
                 </div>
 
